@@ -1,3 +1,7 @@
+Tue Feb 28 02:01:53 1995  John Gilmore  (gnu at toad.com)
+
+	* sim_server.c:  Avoid <krb5/...> and <com_err.h> includes.
+
 Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)
 
     * Added krb5_context to all krb5_routines
